--- a/views/game.ejs
+++ b/views/game.ejs
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="/timesync/timesync.js" defer></script>
     <script type="module" src="armory-pests-game.mjs"></script>
+    <script type="module" src="particles.mjs"></script>
     <script type="module" src="game.js" defer></script>
 </head>
 <body style="background-color:black;">
