--- a/views/game.ejs
+++ b/views/game.ejs
@@ -7,7 +7,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-    <script src="/timesync/timesync.js" defer></script>
+    <!-- <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script> -->
     <script type="module" src="armory-pests-game.mjs"></script>
     <script type="module" src="particles.mjs"></script>
     <script type="module" src="game.js" defer></script>
